# shorts

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml  readings.yml  setup.sh
.claude/commands/: conte.md  generate.md  improve.md  precommit.md  research.md
contes/: 001_team-mirai-rise.md  002_team-mirai-rise.md  003_religion-tax.md  003_religion-tax.research.md  004_korea-election-gap.md  004_korea-election-gap.research.md
images/: 001_kokkaigijido.yml  002_kinkakuji.yml  003_yen-banknote.yml  004_soka-gakkai-hq.yml  005_myeongdong-night.yml  006_incheon-airport.yml  007_cherry-blossom-path.yml
profiles/: tiktok-politics.yml
scripts/: copy-secrets.sh
src/oslo/: __init__.py  cli.py  composer.py  config.py  conte.py  image_gen.py  library.py  pipeline.py  profile.py  readings.py  subtitles.py  text_processor.py  tts.py  utils.py
tests/: test_conte.py  test_image_gen.py  test_library.py  test_profile.py  test_readings.py  test_subtitles.py  test_text_processor.py
